--- a/doc/agile/v1/sprint_backlog_17.org
+++ b/doc/agile/v1/sprint_backlog_17.org
@@ -12,29 +12,29 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-05-14 Tue 17:12]
+#+CAPTION: Clock summary at [2019-05-14 Tue 18:02]
 | <75>                                                       |         |       |       |       |
 | Headline                                                   | Time    |       |       |     % |
 |------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                               | *57:25* |       |       | 100.0 |
+| *Total time*                                               | *58:01* |       |       | 100.0 |
 |------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                    | 57:25   |       |       | 100.0 |
-| Active                                                     |         | 57:25 |       | 100.0 |
-| Edit release notes for previous sprint                     |         |       |  2:41 |   4.7 |
+| Stories                                                    | 58:01   |       |       | 100.0 |
+| Active                                                     |         | 58:01 |       | 100.0 |
+| Edit release notes for previous sprint                     |         |       |  2:41 |   4.6 |
 | Create a video demo for the previous sprint's features     |         |       |  2:11 |   3.8 |
 | Sprint and product backlog grooming                        |         |       |  1:26 |   2.5 |
 | Defining profiles directly on a target model does not work |         |       |  0:30 |   0.9 |
 | Inner modules need to be qualified                         |         |       |  0:22 |   0.6 |
-| Create namespaces for model elements                       |         |       |  8:59 |  15.6 |
+| Create namespaces for model elements                       |         |       |  8:59 |  15.5 |
 | Leaves in internal modules are not captured correctly      |         |       |  1:33 |   2.7 |
-| Try to add relational tracing support                      |         |       |  2:51 |   5.0 |
+| Try to add relational tracing support                      |         |       |  2:51 |   4.9 |
 | Linux and OSX binaries are not stripped                    |         |       |  1:23 |   2.4 |
 | Fix issues with nightly build and CI                       |         |       |  0:05 |   0.1 |
-| Initial analysis to code generate feature infrastructure   |         |       |  7:13 |  12.6 |
-| Replace JSON based feature templates with generated code   |         |       | 16:15 |  28.3 |
-| Make a clear separation between dogen and masd             |         |       |  5:17 |   9.2 |
+| Initial analysis to code generate feature infrastructure   |         |       |  7:13 |  12.4 |
+| Replace JSON based feature templates with generated code   |         |       | 16:15 |  28.0 |
+| Make a clear separation between dogen and masd             |         |       |  5:17 |   9.1 |
 | Update the MASD UML profile to reflect the latest changes  |         |       |  0:05 |   0.1 |
-| Add a method in enumeration that converts it from strings  |         |       |  6:34 |  11.4 |
+| Add a method in enumeration that converts it from strings  |         |       |  7:10 |  12.4 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -588,6 +588,8 @@ down time waiting for builds to sync it.
 
 *** STARTED Add a method in enumeration that converts it from strings :story:
     :LOGBOOK:
+    CLOCK: [2019-05-14 Tue 17:46]--[2019-05-14 Tue 18:02] =>  0:16
+    CLOCK: [2019-05-14 Tue 17:13]--[2019-05-14 Tue 17:33] =>  0:20
     CLOCK: [2019-05-14 Tue 16:01]--[2019-05-14 Tue 17:12] =>  1:11
     CLOCK: [2019-05-14 Tue 15:16]--[2019-05-14 Tue 16:00] =>  0:44
     CLOCK: [2019-05-14 Tue 15:02]--[2019-05-14 Tue 15:15] =>  0:13
