--- a/doc/agile/v1/sprint_backlog_17.org
+++ b/doc/agile/v1/sprint_backlog_17.org
@@ -12,30 +12,31 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-05-14 Tue 22:40]
+#+CAPTION: Clock summary at [2019-05-15 Wed 11:34]
 | <75>                                                       |         |       |       |       |
 | Headline                                                   | Time    |       |       |     % |
 |------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                               | *59:34* |       |       | 100.0 |
+| *Total time*                                               | *61:41* |       |       | 100.0 |
 |------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                    | 59:34   |       |       | 100.0 |
-| Active                                                     |         | 59:34 |       | 100.0 |
-| Edit release notes for previous sprint                     |         |       |  2:41 |   4.5 |
-| Create a video demo for the previous sprint's features     |         |       |  2:11 |   3.7 |
-| Sprint and product backlog grooming                        |         |       |  1:26 |   2.4 |
+| Stories                                                    | 61:41   |       |       | 100.0 |
+| Active                                                     |         | 61:41 |       | 100.0 |
+| Edit release notes for previous sprint                     |         |       |  2:41 |   4.4 |
+| Create a video demo for the previous sprint's features     |         |       |  2:11 |   3.5 |
+| Sprint and product backlog grooming                        |         |       |  1:42 |   2.8 |
 | Defining profiles directly on a target model does not work |         |       |  0:30 |   0.8 |
 | Inner modules need to be qualified                         |         |       |  0:22 |   0.6 |
-| Create namespaces for model elements                       |         |       |  8:59 |  15.1 |
-| Leaves in internal modules are not captured correctly      |         |       |  1:33 |   2.6 |
-| Try to add relational tracing support                      |         |       |  2:51 |   4.8 |
-| Linux and OSX binaries are not stripped                    |         |       |  1:23 |   2.3 |
+| Create namespaces for model elements                       |         |       |  8:59 |  14.6 |
+| Leaves in internal modules are not captured correctly      |         |       |  1:33 |   2.5 |
+| Try to add relational tracing support                      |         |       |  2:51 |   4.6 |
+| Linux and OSX binaries are not stripped                    |         |       |  1:23 |   2.2 |
 | Fix issues with nightly build and CI                       |         |       |  0:05 |   0.1 |
-| Initial analysis to code generate feature infrastructure   |         |       |  7:13 |  12.1 |
-| Replace JSON based feature templates with generated code   |         |       | 16:15 |  27.3 |
-| Make a clear separation between dogen and masd             |         |       |  5:17 |   8.9 |
-| Add a method in enumeration that converts it from strings  |         |       |  7:49 |  13.1 |
+| Initial analysis to code generate feature infrastructure   |         |       |  7:13 |  11.7 |
+| Replace JSON based feature templates with generated code   |         |       | 16:15 |  26.3 |
+| Make a clear separation between dogen and masd             |         |       |  5:17 |   8.6 |
+| Add a method in enumeration that converts it from strings  |         |       |  7:49 |  12.7 |
 | Update the MASD UML profile to reflect the latest changes  |         |       |  0:05 |   0.1 |
-| Mappings as meta-model elements                            |         |       |  0:54 |   1.5 |
+| Mappings as meta-model elements                            |         |       |  2:22 |   3.8 |
+| Emacs maintenance and exploration work                     |         |       |  0:23 |   0.6 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
 
@@ -174,6 +175,8 @@ Time spent creating the demo.
 
 *** STARTED Sprint and product backlog grooming                       :story:
     :LOGBOOK:
+    CLOCK: [2019-05-15 Wed 10:56]--[2019-05-15 Wed 11:07] =>  0:11
+    CLOCK: [2019-05-15 Wed 08:21]--[2019-05-15 Wed 08:26] =>  0:05
     CLOCK: [2019-05-13 Mon 18:31]--[2019-05-13 Mon 18:47] =>  0:16
     CLOCK: [2019-05-13 Mon 08:14]--[2019-05-13 Mon 08:18] =>  0:04
     CLOCK: [2019-05-13 Mon 08:02]--[2019-05-13 Mon 08:07] =>  0:05
@@ -650,6 +653,9 @@ down time waiting for builds to sync it.
 
 *** STARTED Mappings as meta-model elements                           :story:
     :LOGBOOK:
+    CLOCK: [2019-05-15 Wed 11:27]--[2019-05-15 Wed 11:34] =>  0:07
+    CLOCK: [2019-05-15 Wed 11:07]--[2019-05-15 Wed 11:26] =>  0:19
+    CLOCK: [2019-05-15 Wed 09:53]--[2019-05-15 Wed 10:55] =>  1:02
     CLOCK: [2019-05-14 Tue 22:37]--[2019-05-14 Tue 22:40] =>  0:03
     CLOCK: [2019-05-14 Tue 21:45]--[2019-05-14 Tue 22:36] =>  0:51
     :END:
@@ -734,6 +740,31 @@ chooses the mapping set to use.
 In keeping with the idea that profiles are model-level concepts,
 mappings should be too. We should be able to import mappings in a UML
 diagram and override them or define new ones too.
+
+*** Code-generate all transform contexts                              :story:
+
+It seems we missed the injection context, still marked as handcrafted.
+
+*** STARTED Emacs maintenance and exploration work                    :story:
+    :LOGBOOK:
+    CLOCK: [2019-05-15 Wed 09:42]--[2019-05-15 Wed 09:53] =>  0:11
+    CLOCK: [2019-05-15 Wed 09:02]--[2019-05-15 Wed 09:14] =>  0:12
+    :END:
+
+Any time spent improving emacs, exploring new modes, fixing snags,
+etc.
+
+- add support for indent guides. [[https://github.com/DarthFennec/highlight-indent-guides][highlight-indent-guides]], [[https://stackoverflow.com/questions/1587972/how-to-display-indentation-guides-in-emacs/56144459#56144459][SO question]].
+- treemacs issues: when blank type g to refresh.
+
+*** Create or update samples folder                                   :story:
+
+We should add samples to the package. These could be organsided by
+injector (dia, json), then by language type (lam, cpp, csharp) or vice
+versa.
+
+We could also try to generate all of these models when testing the
+package.
 
 *** Add logging support to generated tests                            :story:
 
@@ -856,10 +887,6 @@ Tasks:
 *** Read variability papers                                           :story:
 
 Time spent reading the literature on variability.
-
-*** Emacs maintenance and exploration work                            :story:
-
-Any time spent improving emacs, exploring new modes, fixing snags, etc.
 
 ** Deprecated
 *** CANCELLED Consider adding enumerations in dynamic                 :story:
