--- a/doc/agile/v1/sprint_backlog_17.org
+++ b/doc/agile/v1/sprint_backlog_17.org
@@ -12,30 +12,30 @@
 
 ** Active
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2019-05-15 Wed 11:34]
+#+CAPTION: Clock summary at [2019-05-15 Wed 11:43]
 | <75>                                                       |         |       |       |       |
 | Headline                                                   | Time    |       |       |     % |
 |------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                               | *61:41* |       |       | 100.0 |
+| *Total time*                                               | *61:49* |       |       | 100.0 |
 |------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                    | 61:41   |       |       | 100.0 |
-| Active                                                     |         | 61:41 |       | 100.0 |
-| Edit release notes for previous sprint                     |         |       |  2:41 |   4.4 |
+| Stories                                                    | 61:49   |       |       | 100.0 |
+| Active                                                     |         | 61:49 |       | 100.0 |
+| Edit release notes for previous sprint                     |         |       |  2:41 |   4.3 |
 | Create a video demo for the previous sprint's features     |         |       |  2:11 |   3.5 |
 | Sprint and product backlog grooming                        |         |       |  1:42 |   2.8 |
 | Defining profiles directly on a target model does not work |         |       |  0:30 |   0.8 |
 | Inner modules need to be qualified                         |         |       |  0:22 |   0.6 |
-| Create namespaces for model elements                       |         |       |  8:59 |  14.6 |
+| Create namespaces for model elements                       |         |       |  8:59 |  14.5 |
 | Leaves in internal modules are not captured correctly      |         |       |  1:33 |   2.5 |
 | Try to add relational tracing support                      |         |       |  2:51 |   4.6 |
 | Linux and OSX binaries are not stripped                    |         |       |  1:23 |   2.2 |
 | Fix issues with nightly build and CI                       |         |       |  0:05 |   0.1 |
 | Initial analysis to code generate feature infrastructure   |         |       |  7:13 |  11.7 |
 | Replace JSON based feature templates with generated code   |         |       | 16:15 |  26.3 |
-| Make a clear separation between dogen and masd             |         |       |  5:17 |   8.6 |
-| Add a method in enumeration that converts it from strings  |         |       |  7:49 |  12.7 |
+| Make a clear separation between dogen and masd             |         |       |  5:17 |   8.5 |
+| Add a method in enumeration that converts it from strings  |         |       |  7:49 |  12.6 |
 | Update the MASD UML profile to reflect the latest changes  |         |       |  0:05 |   0.1 |
-| Mappings as meta-model elements                            |         |       |  2:22 |   3.8 |
+| Mappings as meta-model elements                            |         |       |  2:30 |   4.0 |
 | Emacs maintenance and exploration work                     |         |       |  0:23 |   0.6 |
 #+TBLFM: $5='(org-clock-time%-mod @3$2 $2..$4);%.1f
 #+end:
@@ -653,6 +653,7 @@ down time waiting for builds to sync it.
 
 *** STARTED Mappings as meta-model elements                           :story:
     :LOGBOOK:
+    CLOCK: [2019-05-15 Wed 11:35]--[2019-05-15 Wed 11:43] =>  0:08
     CLOCK: [2019-05-15 Wed 11:27]--[2019-05-15 Wed 11:34] =>  0:07
     CLOCK: [2019-05-15 Wed 11:07]--[2019-05-15 Wed 11:26] =>  0:19
     CLOCK: [2019-05-15 Wed 09:53]--[2019-05-15 Wed 10:55] =>  1:02
